Update spacing issues in mental models

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,25 +53,23 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
     line-height: 1.55em;
     color: rgba(0,0,0,.8);
+    margin-top: 35px;
 }
 
 h1 {
     text-transform: uppercase;
     text-align: center;
     font-size: 3.5em;
-    margin-top: 35px;
 }
 h1:first-letter { font-size: 1.5em; }
 
 h2 {
     text-align: center;
     font-size: 3em;
-    margin-top: 35px;
 }
 
 h3 {
     font-size: 1.5em;
-    margin-top: 35px;
 }
 
 a {
@@ -273,7 +271,8 @@ pre {
 }
 
 .bs-sidebar {
-    position: fixed;
+  position: fixed;
+  padding-top: 30%;
 }
 
 /* Reference */
